tests/ui/duplicate.stderr
error: discriminant value `1` assigned more than once
  --> tests/ui/duplicate.rs:22:9
   |
22 |     C = 1,
   |         ^

error: discriminant value `0` assigned more than once
  --> tests/ui/duplicate.rs:29:5
   |
29 |     C,
   |     ^
